fix desktop mobile accordion arrow alignment

--- a/web/app/themes/cfs/assets/styles/components/_accordions.scss
+++ b/web/app/themes/cfs/assets/styles/components/_accordions.scss
@@ -32,7 +32,7 @@
   @include media-md {
     padding: grid(4) 30px grid(4) 0;
     .icon {
-      top: 36px;
+      top: 42px;
     }
   }
 }
